fix z-index sidebutton issue on mobile menu

--- a/public/css/modules.css
+++ b/public/css/modules.css
@@ -263,7 +263,7 @@
   bottom: 0;
   width: 80px;
   height: 60px;
-  z-index: 5500;
+  z-index: 500;
   transition: all 0.15s ease-in-out;
 }
 .active .side-menu-wrapper {
